[wayland] Dragging multiple selected tabs out of the tab bar does not create a new window for most drop locations
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
People
(Reporter: moritz1000, Assigned: stransky)
References
(Blocks 2 open bugs)
Details
Attachments
(3 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:123.0) Gecko/20100101 Firefox/123.0
Steps to reproduce:
- Use Linux + Wayland
- Shift mouse click to select several tabs
- Hold left mouse click and drag the tabs towards the center of the current Firefox window.
Actual results:
Nothing happens.
When releasing left mouse click the tabs just return/stay where they were before, in the same Firefox Window
Expected results:
Firefox should have spawned a new window with the selected tabs.
ADDITIONAL INFORMATION:
- drag and drop of only one tab inside the Firefox window works in Wayland: a new Firefox window spawns
- drag and drop of several tabs while moving them OUTSIDE of the Firefox window (so towards empty space) does work in Wayland: a new Firefox window spawns with the selected tabs
- On X11 drag and drop of several tabs worked in both cases: moving the selected tabs outside of the Firefox window / moving them inside of Firefox
| Reporter | ||
Comment 1•1 year ago
|
||
A short video showcasing the bug on Linux / Wayland:
- drag & drop SEVERAL tabs inside Firefox: does NOT work
- drag & drop ONE tabs inside Firefox: does work
- drag & drop SEVERAL tabs outside Firefox: does work
Comment 2•1 year ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Updated•1 year ago
|
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
(In reply to moritz1000 from comment #0)
- drag and drop of several tabs while moving them OUTSIDE of the Firefox window (so towards empty space) does work in Wayland: a new Firefox window spawns with the selected tabs
Dragging multiple selected tabs does not create a new window for me when dropping outside the window with Nightly 127.0a1 (2024-04-28) on Ubuntu 24.04 (Wayland). It works with XWayland when dropped both inside and outside the window.
There are a few small areas where it works, dropping slightly below the address bar, below the bookmarks bar or above the tab bar successfully creates a new window.
| Assignee | ||
Comment 4•1 year ago
|
||
It's because "application/x-moz-internal-item-list" mime is used for multiple tab drop.
| Assignee | ||
Comment 5•1 year ago
|
||
Updated•1 year ago
|
Comment 7•1 year ago
|
||
| bugherder | ||
Updated•1 year ago
|
Updated•1 year ago
|
Description
•