Bug 1884243 [Wayland] Flip GTK_DRAG_RESULT_ERROR to GTK_DRAG_RESULT_NO_TARGET on Wayland as Gecko expects it r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D211189